@@ -31,18 +31,18 @@ public class CircularListTest  extends LuceneTestCase {
   public void testCircularList() throws IOException {
     CircularList<Integer> list = new CircularList<>(10);
     for(int i=0;i<10; i++) {
-      list.add(new Integer(i));
+      list.add(i);
     }
-    assertEquals("within list", new Integer(0), list.get(0));
+    assertEquals("within list", Integer.valueOf(0), list.get(0));
     for(int i=10;i<20; i++) {
-      list.add(new Integer(i));
-      assertEquals("within list", new Integer(i-9), list.get(0));
+      list.add(i);
+      assertEquals("within list", Integer.valueOf(i - 9), list.get(0));
     }
     
     // now try the resize
     list.resize(5);
-    assertEquals(new Integer(15), list.get(0));
+    assertEquals(Integer.valueOf(15), list.get(0));
     list.resize(10);
-    assertEquals(new Integer(15), list.get(0));
+    assertEquals(Integer.valueOf(15), list.get(0));
   }
 }
